--- a/gh/firebird.html
+++ b/gh/firebird.html
@@ -8,6 +8,6 @@
 	<body>
 		<p>Redirecting...</p>
 		<p>If you are stuck un this screen, this redirect link might be broken. </p>
-		<p>The target for this redirect is: https://github.com/pigeon-nation/FireBird</p>
+		<p>The target for this redirect is: <a href="https://github.com/pigeon-nation/FireBird">https://github.com/pigeon-nation/FireBird</a></p>
 	</body>
 </html>
